# VirtualSwitch

./: .gitignore  CMakeLists.txt  Dockerfile  Dockerfile.dev  LICENSE  README.md  cleanup_test.sh  docker-compose.yml  entrypoint.sh  relay.cpp  setup_test.sh  start.sh  test.sh
gui/: CMakeLists.txt
gui/resources/: allblue.icns  allblue.rc  theme.json
gui/src/: main.cpp  main_window.cpp  main_window.hpp  switch_controller.cpp  switch_controller.hpp  tray_icon.cpp  tray_icon.hpp  utun.cpp
include/core/: ethernet_frame.hpp
include/network/: port.hpp  stun_client.hpp  tap_device.hpp  udp_port.hpp
include/switch/: virtual_switch.hpp
src/: main.cpp
src/core/: ethernet_frame.cpp
src/network/: stun_client.cpp  tap_device.cpp  udp_port.cpp
src/switch/: virtual_switch.cpp
